--- a/MatinGallery.Application/MatinGallery.Application.csproj
+++ b/MatinGallery.Application/MatinGallery.Application.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MatinGallery.Domain\MatinGallery.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
